# whisper_worker

./: .gitignore  LICENSE  pyproject.toml
app/: emit_job.py  main.py  receive_nlp.py  transcribe.py
