[tool.poetry]
name = "whisper-worker"
version = "0.1.0"
description = ""
authors = ["Alexander Ditzend <alex@saia.ar>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
whisper = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
